--- a/.travis.yml
+++ b/.travis.yml
@@ -54,3 +54,6 @@ install:
 script:
   - if [[ "$TRAVIS_PULL_REQUEST" != "false" ]]; then export CSC_IDENTITY_AUTO_DISCOVERY=false; fi
   - NODE_ENV=production yarn release
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      xcrun altool --validate-app --file dist/*-mas.pkg --username "$APPLEID" --password "APPLEIDPASS"
+    fi
